Update build setup for new cheat sheet structure
Sice we changed our file structure for the cheats heets, we needed to update the build system:

- include RST2PDF in sphinx-build, for better PDF file generation and remove the LaTex dependency
- update Makefile for new build setup
- update build action to trigger on all changes of RST-files
- update README.md
- remove unused section in index.rst

Signed-off-by: Jonas Kuenstler <j.kuenstler@phytec.de>

--- a/.github/workflows/deploy_cheat_sheets.yaml
+++ b/.github/workflows/deploy_cheat_sheets.yaml
@@ -11,7 +11,7 @@ on:
     branches:
       - 'main'
     paths:
-      - 'source/cheatsheet*.rst'
+      - 'source/**/*.rst'
 
 jobs:
   Deploy_cheat_sheets:
